Файлы сайта-визитки

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <ul class="links__container">
         <li class="links__link">
           <p class="links__title">Телеграм</p>
-          <a class="linsk__link" href="@ivan_ivanov">@bazadur</a>
+          <a class="linsk__link" href="@bazadur">@bazadur</a>
         </li>
         <li class="links__link">
           <p class="links__title">Эл. почта</p>
-          <a class="linsk__link" href="@ivan_ivanov">kyraj85@gmail.com</a>
+          <a class="linsk__link" href="@bazadur">kyraj85@gmail.com</a>
         </li>
         <li class="links__link">
           <p class="links__title">GIT</p>
-          <a class="linsk__link" href="@ivan_ivanov">https://github.com/Bazadur</a>
+          <a class="linsk__link" href="@bazadur">https://github.com/Bazadur</a>
         </li>
       </ul>
     </section>
@@ -41,19 +41,19 @@
       <ul class="links__container">
         <li class="links__link">
           <p class="links__title">Род деятельности</p>
-          <a class="linsk__link" href="@ivan_ivanov">QAEngineer</a>
+          <a class="linsk__link" href="@bazadur">QAEngineer</a>
         </li>
         <li class="links__link">
           <p class="links__title">Хобби</p>
-          <a class="linsk__link" href="@ivan_ivanov">Саморазвитие</a>
+          <a class="linsk__link" href="@bazadur">Саморазвитие</a>
         </li>
         <li class="links__link">
           <p class="links__title">Место пребывания</p>
-          <a class="linsk__link" href="@ivan_ivanov">Москва</a>
+          <a class="linsk__link" href="@bazadur">Москва</a>
         </li>
         <li class="links__link">
           <p class="links__title">Полных лет</p>
-          <a class="linsk__link" href="@ivan_ivanov">27</a>
+          <a class="linsk__link" href="@bazadur">27</a>
         </li>
       </ul>
     </section>
